--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -110,7 +110,7 @@
 .nav-toggle {
   display: inline-flex;
   position: relative;
-  z-index: 90;
+  z-index: 130;
   align-items: center;
   gap: 0.75rem;
   justify-self: end;
